--- a/week2/day1/activity1/index.html
+++ b/week2/day1/activity1/index.html
@@ -8,6 +8,9 @@
                 width: 20%;
                 height: 200px;
                 background-color: red;
+                text-align:center;
+                margin: auto;
+                position: relative;
             }
             @media screen and (max-width:1000px) {
                 .square {
@@ -32,9 +35,15 @@
                     display:none
                 }
             }
+            .square:hover{
+                background: green;
+            }
+            .square:active{
+                background-color: yellow;
+            }
         </style>
     </head>
     <body>
-        <div class="square"></div>
+        <div class="square">flexbox</div>
     </body>
 </html>
